--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <h1>Ir a Github</h1>
-    <a href="https://github.com/">
+    <a href="https://yovanysoto.github.io/Desafio/">
       <img src="assets/img/github-logo.png" alt="octocat">
     </a>
     <button type="button" class="btn">
-      <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+      <a href="https://yovanysoto.github.io/Desafio/" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
   </div>
 </body>
